feat: add demo, package

--- a/packages/react-bezier-spline-editor/tsconfig.json
+++ b/packages/react-bezier-spline-editor/tsconfig.json
@@ -1,20 +1,28 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Default",
+  "include": ["src/**/*"],
   "compilerOptions": {
+    "allowJs": true,
+    "target": "ES2017",
     "composite": false,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
+    "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
+
+    "lib": ["ES2015", "DOM", "ESNext"],
+    "module": "ESNext",
+
     "moduleResolution": "node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx"
   },
-  "exclude": ["node_modules"]
+  "exclude": ["dist", "build", "node_modules"]
 }
