--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "release": "turbo run bundle && changeset version && changeset publish",
+    "bump": "pnpm changeset"
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "@changesets/cli": "^2.26.2"
   },
   "packageManager": "pnpm@8.6.10",
   "name": "react-bezier-spline-editor"
