--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.4.10",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "^7.32.0",
     "eslint-config-next": "^13.4.1",
